--- a/training-data-xyz/config.yaml
+++ b/training-data-xyz/config.yaml
@@ -27,7 +27,7 @@ data:
 
   # Specify dataset files (all .xyz files in working directory)
   split_dataset:
-    file_path: ./alltraj.xyz
+    file_path: ./ag25_8o_2o2_6cl_80.xyz
     train: 0.8
     val: 0.1
     test: 0.1
